--- a/crudangular_1.client/package.json
+++ b/crudangular_1.client/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "bootstrap": "^5.3.3",
     "jest-editor-support": "*",
+    "ngx-bootstrap": "^18.0.2",
     "run-script-os": "*",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -33,6 +35,7 @@
     "@angular/compiler-cli": "^18.1.0",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.9.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
