--- a/CrudAngular_1.Server/Properties/launchSettings.json
+++ b/CrudAngular_1.Server/Properties/launchSettings.json
@@ -25,7 +25,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7081;http://localhost:5098",
+      "applicationUrl": "https://localhost:7081;http://localhost:5098;https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
