--- a/crudangular_1.client/package.json
+++ b/crudangular_1.client/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "@ngrx/store": "^18.0.2",
     "bootstrap": "^5.3.3",
     "jest-editor-support": "*",
     "ngx-bootstrap": "^18.0.2",
